# wallet_collector

./: .gitignore  Cargo.toml
src/: chain_metadata.scale  main.rs
