[package]
name = "wallet-collector-funder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.9", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
hex = "*"
rusoto = { version = "0.24.2", optional = true }
rusoto_core = { version = "0.47.0", optional = true }
rusoto_dynamodb = { version = "0.47.0", optional = true }
dotenv = "*"
subxt = { git = "https://github.com/paritytech/subxt/", branch = "master", optional = true }
sp-core = { version = "6.0.0" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }

[features]
default = ["funder"]
collector = ["rusoto", "rusoto_core", "rusoto_dynamodb"]
funder = ["subxt"]
