[package]
name = "wallet-collector-funder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"

[dependencies]
serenity = { version = "0.11.1", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
hex = "*"
dotenv = "*"
subxt = { git = "https://github.com/paritytech/subxt/", rev = "0ff4e13b838f2f8ca7a87f120024563ed5ec4d3f", optional = true }
sp-core = { version = "7.0.0" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
sled = "0.34.7"
csv = "1.2.1"

[features]
default = ["collector"]
collector = []
funder = ["subxt"]
